--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,11 +54,12 @@ jobs:
           make tests
           pwd
           realpath -s .coverage.*
+          cp .coverage.* ~/.coverage.*
       - name: Upload coverage
         uses: actions/upload-artifact@v4
         with:
           name: covdata
-          path: /__w/fuse/fuse/.coverage.*
+          path: ~/.coverage.*
 
   coverage:
       name: Coverage
