--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,3 +52,67 @@ jobs:
         run: |
           . /home/firedrake/firedrake/bin/activate
           make tests
+      - name: Upload coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: covdata
+          include-hidden-files: true
+          path: .coverage.*
+
+  coverage:
+      name: Coverage
+      needs: test
+      runs-on: ubuntu-latest
+      container:
+        image: firedrakeproject/firedrake:latest
+        # Github hosted runners require running as root user:
+        # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners/about-github-hosted-runners#docker-container-filesystem
+        options: --user root
+        # volumes:
+        #   - ${{ github.workspace }}:/home/firedrake/output
+      # Steps represent a sequence of tasks that will be executed as
+      # part of the jobs
+      steps:
+        - name: "Check out the repo"
+          uses: "actions/checkout@v2"
+        - name: Checkout correct FIAT branch
+          run: |
+            . /home/firedrake/firedrake/bin/activate
+            /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/fiat
+            cd /home/firedrake/firedrake/src/fiat
+            git fetch
+            git checkout indiamai/integrate_fuse
+            git status
+        - name: Checkout correct firedrake branch
+          run: |
+            . /home/firedrake/firedrake/bin/activate
+            /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/firedrake
+            cd /home/firedrake/firedrake/src/firedrake
+            git fetch
+            git checkout indiamai/new_def_integration
+            git pull
+        - name: "Download coverage data"
+          uses: actions/download-artifact@v4
+          with:
+            name: covdata
+
+        - name: "Combine"
+          run: |
+            . /home/firedrake/firedrake/bin/activate
+            make coverage
+            export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
+            echo "total=$TOTAL" >> $GITHUB_ENV
+            echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
+
+        - name: "Make badge"
+          uses: schneegans/dynamic-badges-action@v1.4.0
+          with:
+            # GIST_TOKEN is a GitHub personal access token with scope "gist".
+            auth: ${{ secrets.GIST_SECRET }}
+            gistID: 8d09e14999153441dba99d1759e90707  # replace with your real Gist id.
+            filename: covbadge.json
+            label: Coverage
+            message: ${{ env.total }}%
+            minColorRange: 50
+            maxColorRange: 90
+            valColorRange: ${{ env.total }}
