--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     # Run on the Github hosted runner
     runs-on: ubuntu-latest
     container:
-      image: firedrakeproject/firedrake:latest
+      image: firedrakeproject/firedrake-vanilla-default:latest
       # Github hosted runners require running as root user:
       # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners/about-github-hosted-runners#docker-container-filesystem
       options: --user root
@@ -24,10 +24,17 @@ jobs:
     # part of the jobs
     steps:
       - uses: actions/checkout@v4
+      - name: Checkout correct firedrake branch
+        run: |
+          /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/firedrake
+          cd /home/firedrake/firedrake/src/firedrake
+          git fetch
+          git checkout indiamai/new_def_integration
+          git pull
+          python -m pip install --break-system-packages -e .
       - name: Install checkedout fuse
         run: |
-          . /home/firedrake/firedrake/bin/activate
-          python -m pip install -e .
+          python -m pip install --break-system-packages -e .
       - name: Checkout correct FIAT branch
         run: |
           . /home/firedrake/firedrake/bin/activate
@@ -36,21 +43,13 @@ jobs:
           git fetch
           git checkout indiamai/integrate_fuse
           git status
-      - name: Checkout correct firedrake branch
-        run: |
-          . /home/firedrake/firedrake/bin/activate
-          /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/firedrake
-          cd /home/firedrake/firedrake/src/firedrake
-          git fetch
-          git checkout indiamai/new_def_integration
-          git pull
-      - name: Install networkx 
-        run: |
-          . /home/firedrake/firedrake/bin/activate
-          python -m pip install networkx
+          python -m pip install --break-system-packages -e .
+      # - name: Install networkx 
+      #   run: |
+      #     . /home/firedrake/firedrake/bin/activate
+      #     python -m pip install networkx
       - name: Run tests
         run: |
-          . /home/firedrake/firedrake/bin/activate
           make tests
       - name: Upload coverage
         uses: actions/upload-artifact@v4
@@ -64,7 +63,7 @@ jobs:
       needs: test
       runs-on: ubuntu-latest
       container:
-        image: firedrakeproject/firedrake:latest
+        image: firedrakeproject/firedrake-vanilla-default:latest
         # Github hosted runners require running as root user:
         # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners/about-github-hosted-runners#docker-container-filesystem
         options: --user root
@@ -75,22 +74,20 @@ jobs:
       steps:
         - name: "Check out the repo"
           uses: "actions/checkout@v2"
-        - name: Checkout correct FIAT branch
-          run: |
-            . /home/firedrake/firedrake/bin/activate
-            /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/fiat
-            cd /home/firedrake/firedrake/src/fiat
-            git fetch
-            git checkout indiamai/integrate_fuse
-            git status
-        - name: Checkout correct firedrake branch
-          run: |
-            . /home/firedrake/firedrake/bin/activate
-            /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/firedrake
-            cd /home/firedrake/firedrake/src/firedrake
-            git fetch
-            git checkout indiamai/new_def_integration
-            git pull
+        # - name: Checkout correct FIAT branch
+        #   run: |
+        #     /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/fiat
+        #     cd /home/firedrake/firedrake/src/fiat
+        #     git fetch
+        #     git checkout indiamai/integrate_fuse
+        #     git status
+        # - name: Checkout correct firedrake branch
+        #   run: |
+        #     /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake/src/firedrake
+        #     cd /home/firedrake/firedrake/src/firedrake
+        #     git fetch
+        #     git checkout indiamai/new_def_integration
+        #     git pull
         - name: "Download coverage data"
           uses: actions/download-artifact@v4
           with:
@@ -98,7 +95,6 @@ jobs:
 
         - name: "Combine"
           run: |
-            . /home/firedrake/firedrake/bin/activate
             make coverage
             export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
             echo "total=$TOTAL" >> $GITHUB_ENV
