--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Checkout correct firedrake branch
         run: |
-          /usr/bin/git config --global --add safe.directory /home/firedrake/
+          /usr/bin/git config --global --add safe.directory /home/firedrake/firedrake
           cd /home/firedrake/firedrake/
           git fetch
           git checkout indiamai/new_def_integration
@@ -40,6 +40,7 @@ jobs:
           /usr/bin/git config --global --add safe.directory /home/firedrake/
           cd /home/firedrake/
           git clone https://github.com/firedrakeproject/fiat.git
+          /usr/bin/git config --global --add safe.directory /home/firedrake/fiat
           cd fiat
           git fetch
           git checkout indiamai/integrate_fuse
