--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install checkedout fuse
         run: |
-          python -m pip install break-system-packages -e .
+          python3 -m pip install break-system-packages -e .
       - name: Build docs
         run: |
           cd docs
