change to make ci run on pushes to main instead of master

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,10 @@
 name: Check docs build cleanly
 
 on:
-  # Run on pushes to master
+  # Run on pushes to main
   push:
     branches:
-      - master
+      - main
   # And all pull requests
   pull_request:
 
