--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
 name: Run lint
 
 on:
-  # Push to master or PR
+  # Push to main or PR
   push:
     branches:
-      - master
+      - main
   pull_request:
 
 jobs:
