--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Run tests
 
 on:
-  # Run on pushes to master
+  # Run on pushes to main
   push:
     branches:
-      - master
+      - main
   # And all pull requests
   pull_request:
 
