--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -1,12 +1,16 @@
-name: Check docs build cleanly
+name: Build and deploy docs
 
 on:
+  # Run on pushes to main
+  push:
+    branches:
+      - main
   # And all pull requests
   pull_request:
 
 jobs:
   build_docs:
-    name: Run doc build
+    name: Run doc build and deploy
     # Run on the Github hosted runner
     runs-on: ubuntu-latest
     container:
@@ -25,19 +29,15 @@ jobs:
       - name: Build docs
         run: |
           cd docs
-          make html SPHINXOPTS="-W --keep-going -n"
-      # - name: Publish Image
-      #   # Develop branch only
-      #   if: github.ref == 'refs/heads/indiamai/deploy-docs'
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: ./docs/build/html
-      #     publish_branch: gh-pages
-      #     enable_jekyll: false
-      #     allow_empty_commit: false
-      #     user_name: 'github-actions[bot]'
-      #     user_email: 'github-actions[bot]@users.noreply.github.com'
+          make html
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/build/html
+          publish_branch: gh-pages
+          enable_jekyll: false
+          allow_empty_commit: false
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
           
-
-    
