add basix, fuse element that looks like a basix one

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,11 @@ dependencies = [
   "sympy",
   "sphinx",
   "matplotlib",
+  "basix"
 ]
 
 [project.urls]
-Repository = "https://github.com/indiamai/fuse.git"
+Repository = "https://github.com/firedrakeproject/fuse.git"
 
 [project.optional-dependencies]
 doc = [
