fix python to python3

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,6 +65,7 @@ jobs:
           path: .coverage.*
 
   coverage:
+      # if: github.ref == 'refs/heads/main'
       name: Coverage
       needs: test
       runs-on: ubuntu-latest
@@ -86,7 +87,7 @@ jobs:
         - name: "Combine"
           run: |
             make coverage
-            export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
+            export TOTAL=$(python3 -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
             echo "total=$TOTAL" >> $GITHUB_ENV
             echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
 
