also only if tests pass

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,10 +65,10 @@ jobs:
           path: .coverage.*
 
   coverage:
-      if: github.ref == 'refs/heads/main'
       name: Coverage
       needs: test
       runs-on: ubuntu-latest
+      if: success() && github.ref == 'refs/heads/main'
       container:
         image: firedrakeproject/firedrake-vanilla-default:latest
       # Steps represent a sequence of tasks that will be executed as
